--- a/2020-GS-ARTICLE.tex
+++ b/2020-GS-ARTICLE.tex
@@ -69,6 +69,83 @@ The process of making a piece sustainable is to collect and pass on the helpful 
 educating the composer himself. In this way, it will be possible to create
 electronics that are technically independent and infinitely reproducible.
 
+\section*{CASE STUDIES}
+
+% Developing the instrument and instrumentalist concepts to the combined form of those into interpretation requires overcoming obsolete parallelism: the computer music performer as an artisan of new luthiery. There is not a sustainability conception under the deception of that wrong and obsolete metaphor. Each luthiery is new, and it evolves with musical needs. Each instrument has his inventor and his virtuoso, but in musical history, those people never coincided. The best instruments were conceived from men entirely devoted to the conception of something unique. The best virtuoso took those instruments to unveil their perspective.
+
+Referring to the electroacoustic music literature, where the substantial difference with the acoustical one is an inevitable continuously changing environment, we prefer to use the topology classification. According to general type, a typology classification is used where characteristics of something are fixed and produce a catalogue of things. A topology classification considers the time-space characteristics of shape instead and permits the time variance of the environments. We classify three topologies of electroacoustic music in literature:
+
+\begin{description}
+  \item[The undocumented] where composers use only word description to generate environment and circumstances;
+  \item[The \emph{hole-word}]\footnote{in stud poker a card which has been dealt
+    face down.} where the score has deep technical documentation but listing names of undocumented instruments;
+  \item[The coded] where informatics translations between languages or informatics technologies are based on literature and shared knowledge.
+\end{description}
+
+The identification of topological classes in place of typological forms is
+necessary to subordinate technology-matter to the musical practice and poetics.
+
+\subsection*{Write the undocumented}
+
+\subsubsection*{1969, \emph{I am Sitting in a Room}, Alvin Lucier}
+
+Speaking at beginner music students about Lucier's \emph{I am sitting in a room}, is a kind of sharing of a multilevel experience. There are many access layers, each with different bits of knowledge requirements. One of these, of course, is how it could be done today.
+
+The score states a text to be read; it explains what will happen and why, so it unveils the process itself. The acoustical properties of the space transform the speech. The \emph{resonant frequency of the room reinforces themselves}, while the others are absorbed, they are attenuated by space, as an instrument to be played and articulated by time.
+
+Today the work could be realised with live electronics, without interruption between cycles. It requires a simple delay line, sized as much as the statement, to be infinitely recycled. Again, today, the sensibility that had characterised the \emph{Lucier's Era} is overwhelmed by anxiety and incapacity to observe something in time. The time-lapse perception model is a \emph{state of mind} constriction, so, with the maximum technological support of an infinite digital delay line, without the necessity of an entire perception, \emph{I am sitting} could be a surgical time-waste, at best quality, of course. The idea of space as an instrument expressed by this apostolic work requires ears and fingers twisted in a whole participated perception of time-space mutation during the performance.
+
+The severe sustainability problem of that work is not technical. It is a simple process. The very most profound problem is sensibility. The worst thing that can happen to the \emph{process-music} is the perfect process execution without the music. To seam process and music, we need to unfold ears and minds to Lucier's perception and sensibility. How? Doing it, like he exactly suggested fifty years ago: practising.
+
+\begin{quote}
+Make versions in which one recorded statement is recycled through many rooms.
+Make versions using one or more speakers of different languages in different
+rooms. Make versions in which, for each generation, the microphone is moved to
+different parts of the room or rooms. Make versions that can be performed in
+real-time. \cite{lais69}
+\end{quote}
+
+% The many versions proposed by the author in the music score point to multiple cases of electroacoustic staging. It is a \emph{free-your-electroacoustic-fantasy} statement, typical of the end of the sixties, unfortunately, forgot the day after. To reset future people's perception by now, young musicians should do that for years, never mapping one single patch in \emph{max4live}. They need an instrument to practise music.
+
+% The offline process remains, like the original statement says, really unchanged. A double recording apparatus of any nature and a chair to sit down and practise.
+
+\subsection*{Rewrite}
+
+\subsubsection*{1987, \emph{Post-prae-ludium n. 1 per Donau}, Luigi Nono}
+\subsubsection*{1989, \emph{Risonanze Erranti}, Luigi Nono}
+
+To avoid misunderstanding, every technological rewriting based on a block diagram must be partially true. Each block named with an intergalactic hole-word can lead everywhere. An example: the sound of the \emph{Halaphon} (to cite one of the Nono's hole-word block) not exist. The \emph{Halaphon} was a way to connect pure musical thinking with consolidated musical practice, embracing acoustical space and electronics. Before the instrument itself, the \emph{Halaphon} was an idea of space-related music that became a necessity and only at the end a technological opportunity.
+
+% \begin{quote}
+% The Halaphon is a digital spatializer which, with the loudspeakers arranged in the
+% room, controls the movement of sound in space. This movement must be continuous,
+% with a soft, superimposed fading from one loudspeaker to another. The dynamics
+% indicated in the score for the Contralto and the instruments also apply for the
+% dynamics of the Halaphon outputs \cite{nlre87}. %Overall four interventions with
+% %the Halaphon are foreseen (see Diagrams 11, 13, 16 and 19): with the exception
+% %of the intervention of programme 16, they are all closely linked to the
+% %rhythmic-temporal execution of the voice or instruments. Further information on
+% %programming the Halaphon is to be found further on, in the paragraph Special
+% %Information, in the diagrams and notations in the score.
+% \end{quote}
+
+% Words can define and reduce some issues to integrate diagrams and musical notation where they are inconsistent or obscure. Reading a musical score unknowing the mental state of the composer that brought it to the world, is a daily committed crime \cite{rw05}. A composer poetics is inevitably invoked into the work he is producing and his musical practice and research. Even when there are knowledge and structured
+% thinking, even then, we can produce the wrong questions to obtain the right, not necessary, answer.
+
+If there is something that must be sustained is exactly that musical behaviour. Each of Nono's words conducts the musician to agile and deeply performable electroacoustic musical environments. So it passes the concept of an instrumental practice consolidated on the means and tools available. Nono himself talks about it by transversally crossing architecture, classical musical practice and technology, in executive and interpretative terms.
+
+Musical score thinking and annotating procedure to obtain a musical match, like Nono's procedure of studying, practising, listening and writing once between infinite possibilities, declare itself as an attempt to do something not complete or not fully defined in its process.
+
+\subsection*{Porting}
+
+The porting of aged music informatics of experimental instruments to a sustained programming language and technology merging into two branches of interests of the authors: the history of instruments (even the technological ones) and the revival of music lost in the past for technological issues, into a new possibility of music playing.
+
+\subsubsection*{1991, \emph{Mobile Locale}, Michelangelo Lupone}
+
+Working side by side with Michelangelo Lupone for the \emph{Mobile Locale}
+\cite{lmml91} porting is exceptionally musical and only marginally a technological and informatics matter. The main goal is to interpret his music with his unavoidable sensibility at the disposal of better comprehension of the music score. Close to this, the fascinating possibility to revive a beautiful work, \emph{Mobile Locale}, stuck by technical problems that obscured its musical value. The work is for percussion and live electronics with fixed media and was conceived around a technology born at CRM\footnote{\url{http://www.crm-music.it/}}
+(Centro Ricerche Musicali, in Rome), the \emph{System Fly} \cite{ml85}.
+
 \vfill\null
 
 \raggedright
